# Go-Go-Gadget-Agents

./: .gitignore  LICENSE  README.md
agent-ui/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
agent-ui/src/app/: layout.tsx  page.tsx
agent-ui/src/app/api/auth/callback/: route.ts
agent-ui/src/app/api/auth/login/: route.ts
agent-ui/src/app/api/auth/logout/: route.ts
agent-ui/src/app/api/auth/me/: route.ts
agent-ui/src/app/api/chat/: route.ts
agent-ui/src/app/api/config/: route.ts
agent-ui/src/app/api/feedback/: route.ts
agent-ui/src/app/api/health/: route.ts
agent-ui/src/components/: agent-flow.tsx  auth-guard.tsx  auth-provider.tsx  config-provider.tsx
agent-ui/src/lib/: auth-session.ts  use-agent-chat.ts
docs/: README.md  architecture.md  best-practices.md  data-flow.md  deployment.md  design.md  orchestration.md  rbac.md
hosted-agents/: README.md
hosted-agents/planner/: Dockerfile  agent.yaml  azure.yaml  main.py
hosted-agents/researcher/: agent.yaml  azure.yaml  main.py
hosted-agents/writer/: .env.example  agent.yaml  azure.yaml  main.py  requirements.txt
infra/terraform/: agent_ui.tf  container.tf  cosmos.tf  foundry.tf  foundry_iq.tf  locals.tf  main.tf  network.tf  outputs.tf  postgres.tf  providers.tf  rbac.tf  search.tf  seed.tf  servicebus.tf  storage.tf  terraform.tfvars.example  variables.tf
scripts/foundry_agents/: create_agents.py  pyproject.toml
scripts/foundry_iq/: configure_foundry_iq.py  pyproject.toml
scripts/seed_postgres/: pyproject.toml  schema.sql  seed.py
