[project]
name = "create-foundry-agents"
version = "0.1.0"
description = "Create the Planner orchestrator + connected Researcher/Writer agents in the Foundry project."
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.17",
    # Classic Foundry Agents (Assistants API): AgentsClient + ConnectedAgentTool.
    # Pinned <2.0.0 — azure-ai-projects/azure-ai-agents 2.x move to the new
    # Responses API and REMOVE create_agent/ConnectedAgentTool. The TS UI
    # (@azure/ai-projects ^1) speaks the same classic threads/runs surface.
    "azure-ai-agents>=1.0.0,<2.0.0",
]

[tool.uv]
package = false
