[project]
name = "configure-foundry-iq"
version = "0.1.0"
description = "Configure Azure AI Search hybrid index, integrated vectorization, indexer, and Foundry IQ knowledge agent (agentic retrieval)."
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.17",
    "azure-search-documents==11.6.0b12",
]

[tool.uv]
package = false
